--- a/views/pages/home.ejs
+++ b/views/pages/home.ejs
@@ -68,10 +68,14 @@
         <div class="col-12 col-sm-6 my-auto">
           <div class="container">
             <h1>Elixicor</h1>
+            <h4>Contactless through Digitally</h4>
             <p>
-              Lorem, ipsum dolor sit amet consectetur adipisicing elit. Recusandae obcaecati quaerat veniam sunt fuga
-              magni ea odit non est dolore, nam libero quis. Vero commodi cumque modi exercitationem cupiditate
-              dignissimos.
+              Elixicor is a platform whose motto is to provide the medical service "contactless through digitally". It
+              tackles the problem of the medical staff coming in contact with each other especially during this high
+              time when Corona is leading the world. It can also be used to inform the doctor with the best medicine
+              which should be prescribed to the patient during consultancy and a period of time a patient will generally
+              take to be completely disease-free based on the following attributes like weight, height, gender, etc to
+              predict the results more accurately.
             </p>
           </div>
         </div>
