--- a/views/pages/treatment.ejs
+++ b/views/pages/treatment.ejs
@@ -17,18 +17,10 @@
     <!-- Our Custom CSS -->
     <link rel="stylesheet" href="/css/records.css" />
     <!-- Scrollbar Custom CSS -->
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/malihu-custom-scrollbar-plugin/3.1.5/jquery.mCustomScrollbar.min.css"
-    />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/malihu-custom-scrollbar-plugin/3.1.5/jquery.mCustomScrollbar.min.css" />
 
     <!-- Font Awesome JS -->
-    <script
-      defer
-      src="https://use.fontawesome.com/releases/v5.0.13/js/solid.js"
-      integrity="sha384-tzzSw1/Vo+0N5UhStP3bvwWPq+uvzCMfrN1fEFe+xBmv1C/AtVX5K0uZtmcHitFZ"
-      crossorigin="anonymous"
-    ></script>
+    <script defer src="https://use.fontawesome.com/releases/v5.0.13/js/solid.js" integrity="sha384-tzzSw1/Vo+0N5UhStP3bvwWPq+uvzCMfrN1fEFe+xBmv1C/AtVX5K0uZtmcHitFZ" crossorigin="anonymous"></script>
     <script
       defer
       src="https://use.fontawesome.com/releases/v5.0.13/js/fontawesome.js"
@@ -78,34 +70,10 @@
         <h2>Treatment</h2>
         <div class="container py-2">
           <!-- timeline item 1 -->
-          <div class="row">
-            <!-- timeline item 1 left dot -->
-            <div class="col-auto text-center flex-column d-none d-sm-flex">
-              <div class="row h-50">
-                <div class="col">&nbsp;</div>
-                <div class="col">&nbsp;</div>
-              </div>
-              <h5 class="m-2">
-                <span class="badge badge-pill bg-light border">&nbsp;</span>
-              </h5>
-              <div class="row h-50">
-                <div class="col border-right">&nbsp;</div>
-                <div class="col">&nbsp;</div>
-              </div>
-            </div>
-            <!-- timeline item 1 event content -->
-            <div class="col py-2">
-              <div class="card">
-                <div class="card-body">
-                  <div class="float-right text-muted">Mon, Jan 9th 2020 7:00 AM</div>
-                  <h4 class="card-title text-muted">Day 1 Orientation</h4>
-                  <p class="card-text">Welcome to the campus, introduction and get started with the tour.</p>
-                </div>
-              </div>
-            </div>
-          </div>
+
           <!--/row-->
           <!-- timeline item 2 -->
+          <% for(let key in synchronal) {%>
           <div class="row">
             <div class="col-auto text-center flex-column d-none d-sm-flex">
               <div class="row h-50">
@@ -124,18 +92,9 @@
               <div class="card border-success shadow">
                 <div class="card-body">
                   <div class="float-right text-success">Tue, Jan 10th 2019 8:30 AM</div>
-                  <h4 class="card-title text-success">Day 2 Sessions</h4>
-                  <p class="card-text"
-                    >Sign-up for the lessons and speakers that coincide with your course syllabus. Meet and greet with
-                    instructors.</p
-                  >
-                  <button
-                    class="btn btn-sm btn-outline-secondary"
-                    type="button"
-                    data-target="#t2_details"
-                    data-toggle="collapse"
-                    >Show Details ▼</button
-                  >
+                  <h4 class="card-title text-success"><%= key%></h4>
+                  <p class="card-text"><%= synchronal[key]%></p>
+                  <button class="btn btn-sm btn-outline-secondary" type="button" data-target="#t2_details" data-toggle="collapse">Show Details ▼</button>
                   <div class="collapse border" id="t2_details">
                     <div class="p-2 text-monospace">
                       <div>08:30 - 09:00 Breakfast in CR 2A</div>
@@ -148,65 +107,11 @@
               </div>
             </div>
           </div>
+          <%}%>
+
           <!--/row-->
           <!-- timeline item 3 -->
-          <div class="row">
-            <div class="col-auto text-center flex-column d-none d-sm-flex">
-              <div class="row h-50">
-                <div class="col border-right">&nbsp;</div>
-                <div class="col">&nbsp;</div>
-              </div>
-              <h5 class="m-2">
-                <span class="badge badge-pill bg-light border">&nbsp;</span>
-              </h5>
-              <div class="row h-50">
-                <div class="col border-right">&nbsp;</div>
-                <div class="col">&nbsp;</div>
-              </div>
-            </div>
-            <div class="col py-2">
-              <div class="card">
-                <div class="card-body">
-                  <div class="float-right text-muted">Wed, Jan 11th 2019 8:30 AM</div>
-                  <h4 class="card-title">Day 3 Sessions</h4>
-                  <p
-                    >Shoreditch vegan artisan Helvetica. Tattooed Codeply Echo Park Godard kogi, next level irony ennui
-                    twee squid fap selvage. Meggings flannel Brooklyn literally small batch, mumblecore PBR try-hard
-                    kale chips. Brooklyn vinyl lumbersexual bicycle rights, viral fap cronut leggings squid chillwave
-                    pickled gentrify mustache. 3 wolf moon hashtag church-key Odd Future. Austin messenger bag normcore,
-                    Helvetica Williamsburg sartorial tote bag distillery Portland before they sold out gastropub
-                    taxidermy Vice.</p
-                  >
-                </div>
-              </div>
-            </div>
-          </div>
-          <!--/row-->
-          <!-- timeline item 4 -->
-          <div class="row">
-            <div class="col-auto text-center flex-column d-none d-sm-flex">
-              <div class="row h-50">
-                <div class="col border-right">&nbsp;</div>
-                <div class="col">&nbsp;</div>
-              </div>
-              <h5 class="m-2">
-                <span class="badge badge-pill bg-light border">&nbsp;</span>
-              </h5>
-              <div class="row h-50">
-                <div class="col">&nbsp;</div>
-                <div class="col">&nbsp;</div>
-              </div>
-            </div>
-            <div class="col py-2">
-              <div class="card">
-                <div class="card-body">
-                  <div class="float-right text-muted">Thu, Jan 12th 2019 11:30 AM</div>
-                  <h4 class="card-title">Day 4 Wrap-up</h4>
-                  <p>Join us for lunch in Bootsy's cafe across from the Campus Center.</p>
-                </div>
-              </div>
-            </div>
-          </div>
+
           <!--/row-->
         </div>
         <!--container-->
@@ -214,11 +119,7 @@
     </div>
 
     <!-- jQuery CDN - Slim version (=without AJAX) -->
-    <script
-      src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-      integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-      crossorigin="anonymous"
-    ></script>
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <!-- Popper.JS -->
     <script
       src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js"
