--- a/views/pages/profile.ejs
+++ b/views/pages/profile.ejs
@@ -68,23 +68,23 @@
               <tbody>
                 <tr>
                   <th scope="row">Name</th>
-                  <td>Pratyush Jain</td>
+                  <td><%=patient.name%></td>
                 </tr>
                 <tr>
                   <th scope="row">Age</th>
-                  <td>19 Years</td>
+                  <td><%=patient.Age%> Years</td>
                 </tr>
                 <tr>
                   <th scope="row">Sex</th>
-                  <td>Male</td>
+                  <td><%=patient.Sex%></td>
                 </tr>
                 <tr>
                   <th scope="row">Height (in m)</th>
-                  <td>1.74</td>
+                  <td><%=patient.height%></td>
                 </tr>
                 <tr>
                   <th scope="row">Weight (in kgs)</th>
-                  <td>80</td>
+                  <td><%=patient.weight%></td>
                 </tr>
               </tbody>
             </table>
