--- a/views/pages/home.ejs
+++ b/views/pages/home.ejs
@@ -40,18 +40,10 @@
   <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
       <div class="container">
-        <a class="navbar-brand" href="#">
+        <a class="navbar-brand" href="/">
           <img src="/images/logo.png" width="80" height="80" alt="" />
         </a>
-        <button
-          class="navbar-toggler"
-          type="button"
-          data-toggle="collapse"
-          data-target="#navbarNavAltMarkup"
-          aria-controls="navbarNavAltMarkup"
-          aria-expanded="false"
-          aria-label="Toggle navigation"
-        >
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse d-lg-flex justify-content-lg-end" id="navbarNavAltMarkup">
@@ -70,12 +62,10 @@
             <h1>Elixicor</h1>
             <h4>Contactless through Digitally</h4>
             <p>
-              Elixicor is a platform whose motto is to provide the medical service "contactless through digitally". It
-              tackles the problem of the medical staff coming in contact with each other especially during this high
-              time when Corona is leading the world. It can also be used to inform the doctor with the best medicine
-              which should be prescribed to the patient during consultancy and a period of time a patient will generally
-              take to be completely disease-free based on the following attributes like weight, height, gender, etc to
-              predict the results more accurately.
+              Elixicor is a platform whose motto is to provide the medical service "contactless through digitally". It tackles the problem of the medical staff coming in contact with each other
+              especially during this high time when Corona is leading the world. It can also be used to inform the doctor with the best medicine which should be prescribed to the patient during
+              consultancy and a period of time a patient will generally take to be completely disease-free based on the following attributes like weight, height, gender, etc to predict the results
+              more accurately.
             </p>
           </div>
         </div>
@@ -86,11 +76,7 @@
     </div>
 
     <!-- SCRIPTS -->
-    <script
-      src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-      integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
-      crossorigin="anonymous"
-    ></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns"
